mdapipkg/objects/Factory__c.object
<CustomObject>
    <fields>
        <fullName>Certifications__c</fullName>
        <label>Certifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ISO 9001</fullName>
                </value>
                <value>
                    <fullName>ISO 14001</fullName>
                </value>
                <value>
                    <fullName>SNI 1903</fullName>
                </value>
                <value>
                    <fullName>HEVEAPRO&amp;C-TRAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employees__c</fullName>
        <label>Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Factory_Code__c</fullName>
        <label>Factory Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Factory_Image__c</fullName>
        <formula>IF(!ISBLANK(Image_URL__c ),IMAGE( Image_URL__c , Name , 100, 100), &quot;No Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factory Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factory_Location__c</fullName>
        <label>Factory Location</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Africa</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Coast</fullName>
                </value>
                <value>
                    <fullName>Congo</fullName>
                </value>
                <value>
                    <fullName>Cote D-lvoire</fullName>
                </value>
                <value>
                    <fullName>D-Lvoire</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Guatemala</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ivory Coast</fullName>
                </value>
                <value>
                    <fullName>Kingdom</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Myanmar</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Philipines</fullName>
                </value>
                <value>
                    <fullName>Phillippines</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Sri-Lanka</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>U.S.A.</fullName>
                </value>
                <value>
                    <fullName>United Kingdom</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>TBC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Port__c</fullName>
        <label>Port</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Port_of_Loading__c</fullName>
        <label>Producer&apos;s Port of Loading (POL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Belawan</fullName>
                </value>
                <value>
                    <fullName>Palembang</fullName>
                </value>
                <value>
                    <fullName>Jambi</fullName>
                </value>
                <value>
                    <fullName>Surabaya</fullName>
                </value>
                <value>
                    <fullName>Padang</fullName>
                </value>
                <value>
                    <fullName>Pontianak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Producer_group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producer Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Factories</relationshipLabel>
        <relationshipName>Producer_Factory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_s_Group__c</fullName>
        <label>Producer&apos;s Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hevea Global</fullName>
                </value>
                <value>
                    <fullName>New Fountain</fullName>
                </value>
                <value>
                    <fullName>Asia Produce</fullName>
                </value>
                <value>
                    <fullName>Kirana</fullName>
                </value>
                <value>
                    <fullName>SPRING RESOURCE</fullName>
                </value>
                <value>
                    <fullName>SG Global</fullName>
                </value>
                <value>
                    <fullName>ABP</fullName>
                </value>
                <value>
                    <fullName>Sri Trang</fullName>
                </value>
                <value>
                    <fullName>Madec</fullName>
                </value>
                <value>
                    <fullName>Wilson Global</fullName>
                </value>
                <value>
                    <fullName>Von Bundit</fullName>
                </value>
                <value>
                    <fullName>Thai Tech</fullName>
                </value>
                <value>
                    <fullName>Chan Tong</fullName>
                </value>
                <value>
                    <fullName>Rubber Net</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HAC</fullName>
                    <default>true</default>
                    <label>HAC</label>
                </value>
                <value>
                    <fullName>Non-HAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_of_Establishment__c</fullName>
        <label>Year of Establishment</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Factory</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Factory_Code__c</columns>
        <columns>Producer_s_Group__c</columns>
        <columns>Port__c</columns>
        <columns>Factory_Location__c</columns>
        <columns>Producer_group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Factories</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Halcyon</fullName>
        <columns>NAME</columns>
        <columns>Factory_Code__c</columns>
        <columns>Producer_s_Group__c</columns>
        <columns>Port__c</columns>
        <columns>Factory_Location__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Producer_s_Group__c</field>
            <operation>equals</operation>
            <value>Hevea Global</value>
        </filters>
        <label>Halcyon</label>
    </listViews>
    <nameField>
        <label>Factory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>